cluster/infrastructure/ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: ingress
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    #- name: websecure
    #  port: 8443
    #  protocol: HTTPS
    #  tls:
    #    mode: Terminate
    #    certificateRefs:
    #      - name: gateway-fun-cert
    #        namespace: default
    #  allowedRoutes:
    #    namespaces:
    #      from: All
